# pyo3-stub-gen

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md  Taskfile.yml  deny.toml  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml  (+1 more)
examples/avoid_name_collision_with_submod/: Cargo.toml  Taskfile.yml  pyproject.toml
examples/avoid_name_collision_with_submod/src/: lib.rs
examples/empty_super_module/: Cargo.toml  Taskfile.yml  pyproject.toml
examples/empty_super_module/src/: lib.rs
examples/empty_super_module/tests/: test_empty_super_module.py
examples/feature_gated/: Cargo.toml  Taskfile.yml  feature_gated.pyi  pyproject.toml
examples/feature_gated/src/: gen_stub_default.rs  lib.rs
examples/feature_gated/tests/: test_a.py
examples/generate_init_py/: Cargo.toml  Taskfile.yml  pyproject.toml
examples/generate_init_py/docs/: conf.py  index.rst
examples/generate_init_py/src/: lib.rs
examples/generate_init_py/tests/: test_runtime_type_alias.py
examples/hidden_module_docgen_test/: Cargo.toml  Taskfile.yml  pyproject.toml
examples/hidden_module_docgen_test/docs/: conf.py
examples/hidden_module_docgen_test/src/: lib.rs
examples/mixed/: Cargo.toml  Taskfile.yml  pyproject.toml
examples/mixed/docs/: conf.py
examples/mixed/src/: lib.rs  module_override_tests.rs
examples/mixed/tests/: test_mixed.py
examples/mixed_sub/: Cargo.toml  Taskfile.yml  pyproject.toml
examples/mixed_sub/src/: lib.rs
examples/mixed_sub/tests/: test_mixed.py  test_mixed_sub.py  test_mixed_sub_multiple.py
examples/mixed_sub_import_type/: Cargo.toml  Taskfile.yml  pyproject.toml
examples/mixed_sub_import_type/src/: lib.rs
examples/mixed_sub_import_type/tests/: test_mixed_sub.py
examples/mixed_sub_multiple/: Cargo.toml  pyproject.toml
examples/mixed_sub_multiple/src/: lib.rs
examples/mixed_sub_multiple/tests/: test_mixed_sub_multiple.py
examples/mixed_with_py_init/: Cargo.toml  Taskfile.yml  pyproject.toml
examples/mixed_with_py_init/python/: test_imports.py
examples/mixed_with_py_init/src/: lib.rs
examples/numpy_example/: Cargo.toml  Taskfile.yml  numpy_example.pyi  pyproject.toml
examples/numpy_example/src/: lib.rs
examples/numpy_example/tests/: test_numpy_example.py
examples/pure/: .stubtest-allowlist  Cargo.toml  Taskfile.yml  pure.pyi  pyo3_stub_gen_testing_pure.pyi  pyproject.toml  test_rust_type_marker.py
examples/pure-abi3/: Cargo.toml  pyproject.toml
examples/pure/docs/: conf.py  index.rst
examples/pure/src/: chrono_types.rs  custom_exceptions.rs  float_values.rs  ip_types.rs  lib.rs  literal_test.rs  manual_overloading.rs  manual_submit.rs  numpy.rs  overloading.rs  overriding.rs  rust_type_marker.rs  skip_stub_type_test.rs  time_types.rs
examples/pure/tests/: test_chrono_types.py  test_deprecated.py  test_ip_types.py  test_numpy.py  test_python.py  test_time_types.py  test_type_error_cases.py
examples/same_name_submod/: Cargo.toml  Taskfile.yml  pyproject.toml
examples/same_name_submod/src/: lib.rs
examples/simple_name_collision/: Cargo.toml  Taskfile.yml  pyproject.toml
examples/simple_name_collision/src/: lib.rs
examples/test-dash-package/: Cargo.toml  Taskfile.yml  pyproject.toml  test_dash_package.pyi
examples/test-dash-package/src/: lib.rs
examples/test-dash-package/tests/: test_import.py
pyo3-stub-gen/: Cargo.toml  build.rs
pyo3-stub-gen-derive/: Cargo.toml
pyo3-stub-gen-derive/src/: gen_stub.rs  lib.rs
pyo3-stub-gen-derive/src/gen_stub/: arg.rs  attr.rs  gen_from_python.rs  member.rs  method.rs  new.rs  parameter.rs  parse_python.rs  pyclass.rs  pyclass_complex_enum.rs  pyclass_enum.rs  pyclass_rich_enum.rs  pyclass_tree.rs  pyfunction.rs  pymethods.rs  renaming.rs  signature.rs  stub_type.rs  type_union_enum.rs  util.rs  variant.rs
pyo3-stub-gen-derive/src/snapshots/: pyo3_stub_gen_derive__gen_stub__tests__function_with_enum_default_value.snap  pyo3_stub_gen_derive__gen_stub__tests__function_with_literal_default_value.snap  pyo3_stub_gen_derive__gen_stub__tests__overload_example_1_expansion.snap  pyo3_stub_gen_derive__gen_stub__tests__overload_example_2_expansion.snap  pyo3_stub_gen_derive__gen_stub__tests__regular_function_no_overload.snap
pyo3-stub-gen-derive/tests/: compile_fail.rs
pyo3-stub-gen-derive/tests/failing_cases/: gen_function_invalid_syntax.rs  gen_function_invalid_syntax.stderr  gen_function_multiple_functions.rs  gen_function_multiple_functions.stderr  gen_function_no_function_def.rs  gen_function_no_function_def.stderr  pyfunction_no_default_overload_without_python_overload.rs  pyfunction_no_default_overload_without_python_overload.stderr  pyfunction_typo_pyhton_overload.rs  pyfunction_typo_pyhton_overload.stderr  rust_type_invalid_syntax.rs  rust_type_invalid_syntax.stderr  rust_type_nonexistent.rs  rust_type_nonexistent.stderr  type_ignore_empty_array.rs  type_ignore_empty_array.stderr
pyo3-stub-gen-derive/tests/ui/: type_ignore_empty_array.stderr
pyo3-stub-gen-testing/: Cargo.toml  pyo3_stub_gen_testing.pyi  pyproject.toml
pyo3-stub-gen-testing-mixed/: Cargo.toml  pyproject.toml
pyo3-stub-gen-testing-mixed/invalids/: test_mixed.py
pyo3-stub-gen-testing-mixed/python/pyo3_stub_gen_testing_mixed/: main_mod.pyi  my_rust_pkg.pyi
pyo3-stub-gen-testing-mixed/src/: lib.rs
pyo3-stub-gen-testing-mixed/tests/: test_mixed.py  test_python.py
pyo3-stub-gen-testing/src/: lib.rs
pyo3-stub-gen-testing/tests/: test_python.py
pyo3-stub-gen/src/: exception.rs  generate.rs  lib.rs  pyproject.rs  rule_name.rs  stub_type.rs  type_check_rule.rs  type_info.rs  util.rs
pyo3-stub-gen/src/docgen/: builder.rs  config.rs  default_parser.rs  export.rs  ir.rs  link.rs  mod.rs  render.rs  sphinx_ext.py  types.rs  util.rs
pyo3-stub-gen/src/generate/: arg.rs  class.rs  deprecated.rs  docstring.rs  enum_.rs  error.rs  function.rs  member.rs  method.rs  module.rs  new.rs  parameters.rs  qualifier.rs  return_type_info.rs  stub_info.rs  type_alias.rs  union.rs  variable.rs  variant_methods.rs
pyo3-stub-gen/src/runtime/: builtins.rs  mod.rs  pyo3_types.rs
(+289 files in other folders)
