[workspace]
resolver = "2"
members = [
  "examples/avoid_name_collision_with_submod",
  "examples/empty_super_module",
  "examples/feature_gated",
  "examples/hidden_module_docgen_test",
  "examples/mixed",
  "examples/pure",
  "examples/simple_name_collision",
  "examples/test-dash-package",
  "examples/type-statement-alias",
  "examples/underscore_items",
  "pyo3-stub-gen",
  "pyo3-stub-gen-derive"
]

[workspace.package]
version = "0.19.0"
edition = "2021"
description = "Stub file (*.pyi) generator for PyO3"
readme = "README.md"
repository = "https://github.com/Jij-Inc/pyo3-stub-gen"
license = "MIT OR Apache-2.0"
keywords = ["pyo3"]

[workspace.dependencies]
ahash = "0.8.11"
anyhow = "1.0.99"
chrono = "0.4.43"
either = "1.15.0"
env_logger = "0.11.8"
heck = "0.5"
indexmap = ">= 2.7.0"
insta = "1.46.1"
inventory = "0.3.21"
itertools = "0.14.0"
log = "0.4.29"
maplit = "1.0.2"
num-complex = "0.4.6"
numpy = ">= 0.26.0"
ordered-float = { version = "5.1", default-features = false }
prettyplease = "0.2.37"
proc-macro2 = "1.0.106"
pyo3 = ">= 0.26.0"
quote = "1.0.44"
rust_decimal = { version = "1.40", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
syn = "2.0.114"
test-case = "3.3.1"
toml = "0.9.11"
trybuild = "1.0.114"
