[package]
name = "pyo3-stub-gen-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "extra-traits"] }

[dev-dependencies]
insta.workspace = true
inventory.workspace = true
prettyplease.workspace = true
pyo3.workspace = true
