[package]
name = "pyo3-stub-gen-derive"
version.workspace = true
edition.workspace = true

description.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "extra-traits"] }
rustpython-parser = "0.4"
indexmap.workspace = true

[dev-dependencies]
pyo3-stub-gen = { path = "../pyo3-stub-gen" }
insta.workspace = true
inventory.workspace = true
prettyplease.workspace = true
pyo3.workspace = true
trybuild.workspace = true
