[package]
name = "pyo3-stub-gen-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
pyo3-stub-gen = { workspace = true, optional = true }

[features]
stub_gen = ["pyo3-stub-gen"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = ["stub_gen"]
