[package]
name = "pyo3-stub-gen"
version.workspace = true
edition.workspace = true
description.workspace = true
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
either = { workspace = true, optional = true }
indexmap.workspace = true
inventory.workspace = true
itertools.workspace = true
log.workspace = true
maplit.workspace = true
num-complex.workspace = true
numpy = { workspace = true, optional = true }
ordered-float = { workspace = true, optional = true }
pyo3.workspace = true
rustpython-parser = { version = "0.4", default-features = false, features = [
    "location",
    "num-bigint",
] }
rust_decimal = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
toml.workspace = true

[dependencies.pyo3-stub-gen-derive]
path = "../pyo3-stub-gen-derive"
version = "0.19.0"

[dev-dependencies]
test-case.workspace = true

[features]
default = ["either", "infer_signature", "numpy", "ordered-float"]
either = ["dep:either"]
infer_signature = []
numpy = ["dep:numpy"]
ordered-float = ["dep:ordered-float"]
rust_decimal = ["dep:rust_decimal"]
