[project]
name = "avoid_name_collision_with_submod"
version = "0.1"
requires-python = ">=3.10"

[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[tool.pyrefly]
search-path = ["python"]

[dependency-groups]
dev = [
  "pyrefly>=0.50.1",
  "pyright>=1.1.400",
  "ty>=0.0.7",
]

[tool.uv]
cache-keys = [{ file = "src/**/*.rs" }]
