[package]
name = "feature_gated"
description = "Example for feature_gated stub generation"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash.workspace = true
env_logger.workspace = true
pyo3-stub-gen = { path = "../../pyo3-stub-gen", optional = true } # feature_gated
pyo3.workspace = true
pyo3.features = ["experimental-async"]

[[bin]]
name = "stub_gen"
doc = false
required-features = ["stub-gen"]

[features]
stub-gen = ["pyo3-stub-gen"]
