[package]
name = "feature_gated"
description = "Example for feature_gated stub generation"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = { workspace = true, optional = true }                # Used only for bin/stub_gen
pyo3-stub-gen = { path = "../../pyo3-stub-gen", optional = true } # Feature gated dependency
pyo3-stub-gen-derive = { path = "../../pyo3-stub-gen-derive" }    # This is always required for `#[remove_gen_stub]` macro
pyo3.workspace = true

[[bin]]
name = "stub_gen"
doc = false
required-features = ["stub-gen"]

[features]
stub-gen = ["pyo3-stub-gen", "env_logger"]
