[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "feature_gated"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pyrefly>=0.50.1",
  "pyright>=1.1.400",
  "pytest>=9.0.3",
  "ty>=0.0.7",
]

[tool.uv]
cache-keys = [{ file = "src/**/*.rs" }]
