[package]
name = "generate_init_py"
version.workspace = true
edition.workspace = true
description = "Example for generate-init-py feature"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
doc = false
name = "stub_gen"

[dependencies]
env_logger.workspace = true
pyo3.workspace = true
pyo3-stub-gen = { path = "../../pyo3-stub-gen" }
