[project]
name = "generate_init_py"
version = "0.1"
requires-python = ">=3.10"

[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "generate_init_py._core"
python-source = "python"

[tool.pyo3-stub-gen]
generate-init-py = true

[tool.pyo3-stub-gen.doc-gen]
output-dir = "docs/api"
json-output = "api_reference.json"
intro-message = "Example for generate-init-py feature."
contents-table = true
separate-items = true

[tool.uv]
cache-keys = [{ file = "src/**/*.rs" }]
