[package]
name = "mixed"
description = "Example for Mixed Rust/Python layout"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger.workspace = true
pyo3.workspace = true
pyo3-stub-gen = { path = "../../pyo3-stub-gen" }

[[bin]]
name = "stub_gen"
doc = false
