[package]
name = "mixed"
description = "Example for Mixed Rust/Python layout with submodule"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger.workspace = true
pyo3.workspace = true
pyo3-stub-gen = { path = "../../pyo3-stub-gen" }

[[bin]]
name = "stub_gen"
doc = false
