[package]
name = "mixed_sub"
version = "0.1.0"
edition = "2021"
description = "Example for Mixed Rust/Python layout with submodule"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.11.8"
pyo3 = ">= 0.21.0"
pyo3-stub-gen = { path = "../../pyo3-stub-gen" }

[[bin]]
name = "stub_gen"
doc = false
