[project]
name = "mixed_with_py_init"
version = "0.1"
requires-python = ">=3.10"

[dependency-groups]
dev = ["pyright>=1.1.408"]

[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "mixed_with_py_init._native"
python-source = "python"
