[package]
name = "numpy_example"
version = "0.1.0"
edition = "2021"
description = "Example for Numpy Types"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.11.8"
pyo3 = ">= 0.24.0"
pyo3-stub-gen = { path = "../../pyo3-stub-gen" }
numpy = ">= 0.24.0"

[[bin]]
name = "stub_gen"
doc = false
