[package]
name = "pure"
description = "Example for pure-Rust layout"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash.workspace = true
env_logger.workspace = true
numpy.workspace = true
pyo3-stub-gen = { path = "../../pyo3-stub-gen", features = ["rust_decimal"] }
pyo3.workspace = true
pyo3.features = ["experimental-async", "rust_decimal"]
rust_decimal.workspace = true

[[bin]]
name = "stub_gen"
doc = false
