[project]
name = "pure"
version = "0.1"
requires-python = ">=3.10"

[dependency-groups]
dev = [
  "mypy==1.19.1",
  "myst-parser",
  "pydantic>=2.11.9",
  "pyrefly>=0.50.1",
  "pyright>=1.1.400",
  "pytest-asyncio>=1.1.0",
  "pytest>=9.0.3",
  "syrupy>=4",
  "sphinx",
  "sphinx-rtd-theme",
  "ty>=0.0.7",
]

[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pyo3-stub-gen.doc-gen]
output-dir = "docs/api"
json-output = "api_reference.json"
index-title = "API Reference"
contents-table = true
separate-items = true

[tool.pyrefly]
project-excludes = ["**/type_error_cases/*.py", "docs/api/**"]
enabled-ignores = ["type", "pyrefly"]

[tool.pyright]
ignore = ["**/type_error_cases/*.py", "docs/api/**"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/*.rs" }]
