[project]
name = "simple_name_collision"
version = "0.1"
requires-python = ">=3.10"

[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[dependency-groups]
dev = [
  "pyrefly>=0.50.1",
  "pyright>=1.1.400",
  "ty>=0.0.7",
]

[tool.uv]
cache-keys = [{ file = "src/**/*.rs" }]
