[package]
name = "test-dash-package"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "test_dash_package"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
pyo3-stub-gen = { path = "../../pyo3-stub-gen" }

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
