[project]
# maturin will convert `-` to `_` in the package name automatically
# This module tests pyo3-stub-gen correctly handles package names with dashes
name = "test-dash-package"
version = "0.1.0"
requires-python = ">=3.10"

[build-system]
requires = ["maturin>=1"]
build-backend = "maturin"

[tool.maturin]
# For cases where we define `module-name` explicitly here are tested in other examples.

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pyrefly>=0.50.1",
  "pyright>=1.1.400",
  "pytest>=9.0.3",
  "ty>=0.0.7",
]

[tool.uv]
cache-keys = [{ file = "src/**/*.rs" }]
